--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,3 +6,6 @@
 .page-header {
   background-color: #C65AEE;
   background-image: linear-gradient(120deg, #C69BEE, #C65AEE);}
+
+h1,h2,h3,h4,h5,h6{
+color: #C65AEE!important}
