--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,5 +7,5 @@
   background-color: #C65AEE;
   background-image: linear-gradient(120deg, #C69BEE, #C65AEE);}
 
-h2,h3,h4,h5,h6{
+main h1, main h2, main h3, main h4, main h5, main h6{
 color: #C65AEE!important}
