--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,5 +7,12 @@
   background-color: #C65AEE;
   background-image: linear-gradient(120deg, #C69BEE, #C65AEE);}
 
+.project-tagline {
+  opacity: 1;}
+
+header h1, header h2{
+color: #FFFFFF
+}
+
 main h1, main h2, main h3, main h4, main h5, main h6{
 color: #C65AEE!important}
