--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 
 .page-header {
   background-color: #C65AEE;
-  background-image: linear-gradient(120deg, #C69BEE, #C65AEE);}
+  background-image: linear-gradient(120deg, #C65AEE, #664672);}
 
 .project-tagline {
   opacity: 1;}
@@ -15,4 +15,7 @@ color: #FFFFFF
 }
 
 main h1, main h2, main h3, main h4, main h5, main h6{
-color: #C65AEE!important}
+color: #664672!important}
+
+main a {
+  color: #C65AEE;}
