--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,4 +18,4 @@ main h1, main h2, main h3, main h4, main h5, main h6{
 color: #664672!important}
 
 main a {
-  color: #664672;}
+  color: #C65AEE;}
