--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,6 +10,13 @@
 .project-tagline {
   opacity: 1;}
 
+.main-content blockquote {
+  padding: 0;
+  margin-left: 0;
+  color: #FFFFFF!important;
+  border: none
+  background-color: #9851b2;}
+
 header h1, header h2{
 color: #FFFFFF
 }
