--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,11 +14,11 @@
   padding: 0;
   margin-left: 0;
   color: #FFFFFF!important;
-  border: none
+  border: none;
   background-color: #9851b2;}
 
 header h1, header h2{
-color: #FFFFFF
+color: #FFFFFF;
 }
 
 main h1, main h2, main h3, main h4, main h5, main h6{
