--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,7 +15,7 @@
   margin-left: 0;
   color: #FFFFFF!important;
   border: none;
-  background-color: #9851b2;}
+  background-color: #9851b22E;}
 
 header h1, header h2{
 color: #FFFFFF;
