--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,11 +11,11 @@
   opacity: 1;}
 
 .main-content blockquote {
-  padding: 0;
-  margin-left: 0;
-  color: #FFFFFF!important;
-  border: none;
-  background-color: #9851b22E;}
+padding: 0.2rem 1rem 0.5rem 1rem;
+margin-left: 0;
+color: #664672;
+border: dashed;
+background-color: #9851b22e;}
 
 header h1, header h2{
 color: #FFFFFF;
