--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,7 +17,7 @@ color: #664672;
 border: dashed;
 background-color: #9851b22e;}
 
-.main-content blockquote a{
+.main-content blockquote>a{
   color: #a84fc9;}
 
 header h1, header h2{
