--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,10 +27,10 @@ color: #FFFFFF;
 main h1, main h2, main h3, main h4, main h5, main h6{
 color: #664672!important}
 
-main h1{
+.main-content h1{
   margin-top: 5rem;}
 
-main h2{
+.main-content h2{
   margin-top: 4rem;}
 
 main a {
