--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,7 +12,7 @@
 
 .main-content blockquote {
 padding: 0.2rem 1rem 0.5rem 1rem;
-margin-top:5rem;
+margin-bottom:5rem;
 margin-left: 0;
 color: #664672;
 border: dashed;
