--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -36,3 +36,9 @@ color: #664672!important}
 
 main a {
   color: #aa54c9;}
+
+.main-content ul, .main-content ol {
+    margin-top: 0;
+    margin-left: 0;
+    padding: 0;
+}
