--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -37,7 +37,7 @@ color: #664672!important}
 main a {
   color: #aa54c9;}
 
-.main-content ul, .main-content ol {
+.main-content ul:first-of-type{
     margin-top: 0;
     margin-left: 0;
     padding: 0;
