--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -42,3 +42,7 @@ main a {
     margin-left: 0;
     padding: 0;
 }
+
+.main-content ul:first-of-type>li {
+  font-size: 1.17em;
+  font-weight: bold;}
