--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -45,4 +45,5 @@ main a {
 
 .main-content ul:first-of-type>li {
   font-size: 1.17em;
-  font-weight: bold;}
+  font-weight: bold;
+  line-height: 2em;}
