--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -41,6 +41,7 @@ main a {
     margin-top: 0;
     margin-left: 0;
     padding: 0;
+    list-style: none;
 }
 
 .main-content ul:first-of-type>li {
