--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -48,3 +48,15 @@ main a {
   font-size: 1.17em;
   font-weight: bold;
   line-height: 2em;}
+
+.main-content img {
+    max-width: calc(100% - 3rem);}
+
+img {
+  border: 2px;
+  margin: 1rem;
+  color: #664672;
+  border: dashed;
+  padding: 1rem;
+  background-color: #9851b22e;
+}
