--- a/media/css/etliste.css
+++ b/media/css/etliste.css
@@ -121,6 +121,12 @@ a.etliste_link:hover{}
 
 .etliste_pager {}
 
+#etliste_searchresultmessage{
+	padding-top: 15px;
+    padding-bottom: 10px;
+    font-weight: bold;
+}
+
 .etliste_content_row {
   padding-left: 5px;
   padding-top: 10px;
